[gd_scene load_steps=6 format=2]

[ext_resource path="res://LobbyWorker.gd" type="Script" id=1]
[ext_resource path="res://WalkerRemoteTransform.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 13.0
height = 12.0

[sub_resource type="PhysicsMaterial" id=2]
friction = 0.0
bounce = 0.6

[sub_resource type="CapsuleShape2D" id=3]
height = 10.0

[node name="LobbyWorker" type="PathFollow2D"]
position = Vector2( 448, 24 )
rotate = false
loop = false
script = ExtResource( 1 )

[node name="WorkerArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorkerArea"]
shape = SubResource( 1 )

[node name="WorkTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[node name="ResetTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 0
collision_mask = 0
physics_material_override = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 3 )

[node name="CollisionTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="WalkerRemoteTransform" parent="." instance=ExtResource( 3 )]
[connection signal="body_entered" from="WorkerArea" to="." method="_on_WorkerArea_body_entered"]
[connection signal="timeout" from="WorkTimer" to="." method="_on_WorkTimer_timeout"]
[connection signal="timeout" from="ResetTimer" to="." method="_on_ResetTimer_timeout"]
[connection signal="timeout" from="CollisionTimer" to="." method="_on_CollisionTimer_timeout"]
